--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<slf4j.version>1.7.5</slf4j.version>
 
 		<!-- Test -->
-		<junit.version>4.11</junit.version>
+		<junit.version>4.12</junit.version>
 
 		<!-- Mongo DB -->
 		<org.mongodb.morphia.version>0.106</org.mongodb.morphia.version>
@@ -74,6 +74,13 @@
 	        <artifactId>spring-data-mongodb</artifactId>
 	        <version>${org.mongodb.version}</version>
 	    </dependency>
+	    
+	    <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
+		</dependency>
+	    
 		<!-- Test Artifacts -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -82,6 +89,29 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+		
+		<dependency>
+		   <groupId>org.easytesting</groupId>
+		   <artifactId>fest-assert-core</artifactId>
+		   <version>2.0M10</version>
+		</dependency>
 	</dependencies>	
 	
 	 <build>
