--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 		<!-- Mongo DB -->
 		<org.mongodb.morphia.version>0.106</org.mongodb.morphia.version>
-		<org.mongodb.version>1.6.2.RELEASE</org.mongodb.version>
+		<org.mongodb.version>1.5.5.RELEASE</org.mongodb.version>
 	</properties>
 	
 	<dependencies>
@@ -81,6 +81,13 @@
 			<version>4.2.0.Final</version>
 		</dependency>
 	    
+	    <!-- Spring and Transactions -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>${spring-framework.version}</version>
+		</dependency>
+		
 		<!-- Test Artifacts -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -108,10 +115,12 @@
 		</dependency>
 		
 		<dependency>
-		   <groupId>org.easytesting</groupId>
-		   <artifactId>fest-assert-core</artifactId>
-		   <version>2.0M10</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-framework.version}</version>
+			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>	
 	
 	 <build>
