--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <properties>
 
 		<!-- Generic properties -->
-		<java.version>1.7</java.version>
+		<java.version>1.6</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -24,6 +24,10 @@
 		<!-- Mongo DB -->
 		<org.mongodb.morphia.version>1.0.1</org.mongodb.morphia.version>
 		<org.mongodb.version>1.5.5.RELEASE</org.mongodb.version>
+	    <org.mongodb.driver>3.0.0-beta3</org.mongodb.driver>
+
+	  	<com.spark.version>1.1.1</com.spark.version>
+
 	</properties>
 	
 	<dependencies>
@@ -53,13 +57,19 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongodb-driver</artifactId>
-			<version>3.0.0-beta3</version>
+			<version>${org.mongodb.driver}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
-			<version>1.0</version>
+			<version>${com.spark.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.19</version>
 		</dependency>
 
 		<!-- MongoDB -->
