--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<org.mongodb.version>1.5.5.RELEASE</org.mongodb.version>
 	    <org.mongodb.driver>3.0.0-beta3</org.mongodb.driver>
 
+	  	<!-- Spark fwk -->
 	  	<com.spark.version>1.1.1</com.spark.version>
 
 	</properties>
